--- a/leprechaun.app/Contents/Frameworks/Chromium Embedded Framework.framework/Resources/Info.plist
+++ b/leprechaun.app/Contents/Frameworks/Chromium Embedded Framework.framework/Resources/Info.plist
@@ -2,22 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>BreakpadProduct</key>
-	<string>Chromium Embedded Framework_Mac</string>
-	<key>BreakpadProductDisplay</key>
-	<string>Chromium Embedded Framework</string>
-	<key>BreakpadReportInterval</key>
-	<string>3600</string>
-	<key>BreakpadSendAndExit</key>
-	<string>YES</string>
-	<key>BreakpadSkipConfirm</key>
-	<string>YES</string>
-	<key>BreakpadURL</key>
-	<string>none</string>
-	<key>BreakpadVersion</key>
-	<string>43.0.2357.81</string>
 	<key>BuildMachineOSBuild</key>
-	<string>14D136</string>
+	<string>15F34</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -29,20 +15,22 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>43.0.2357.81</string>
+	<string>3.2924.1571.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>2357.81</string>
+	<string>1571.0</string>
+	<key>DTCompiler</key>
+	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTSDKBuild</key>
-	<string>13F34</string>
+	<string>10.11</string>
 	<key>DTSDKName</key>
-	<string>macosx10.9</string>
+	<string>macosx10.11</string>
 	<key>DTXcode</key>
-	<string>0630</string>
+	<string>0731</string>
 	<key>DTXcodeBuild</key>
-	<string>6D570</string>
+	<string>7D1014</string>
 	<key>SCMRevision</key>
-	<string>4d096306deb9e86953c81f08454dd6db07b406b5</string>
+	<string>314da7cc1e56fc9fa9271bac2b029922feb4b6f2</string>
 </dict>
 </plist>
